todo update controller response fix

--- a/ToDoAPI/public/task.html
+++ b/ToDoAPI/public/task.html
@@ -11,14 +11,14 @@
     <!-- main  -->
     <link rel="stylesheet" href="./main.css" />
 
-    <title>Edit Task || Final</title>
+    <title>Edit ToDo || Final</title>
   </head>
   <body>
     <div class="container">
       <form class="single-task-form">
-        <h4>Edit Task</h4>
+        <h4>Edit ToDo</h4>
         <div class="form-control">
-          <label>Task ID</label>
+          <label>ToDo ID</label>
           <p class="task-edit-id"></p>
         </div>
         <div class="form-control">
@@ -32,7 +32,7 @@
         <button type="submit" class="block btn task-edit-btn">edit</button>
         <div class="form-alert"></div>
       </form>
-      <a href="index.html" class="btn back-link">back to tasks</a>
+      <a href="index.html" class="btn back-link">back to ToDos</a>
     </div>
     <!-- axios -->
     <script
