--- a/ToDoAPI/public/index.html
+++ b/ToDoAPI/public/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="./normalize.css" />
     <!-- main css -->
     <link rel="stylesheet" href="./main.css" />
-    <title>Task Manager || Final</title>
+    <title>ToDo List || Final</title>
   </head>
   <body>
     <form class="task-form">
-      <h4>task manager</h4>
+      <h4>ToDo Manager</h4>
       <div class="form-control">
         <input
           type="text"
